changes by intern-testing phase

--- a/about.html
+++ b/about.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="en-IN">
-<head>
-    <meta charSet="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <link rel="stylesheet" type="text/css" href="assets/css/default.css">
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/owl.css">
-	<link rel="stylesheet"  type="text/css" href="assets/css/mycustom.css">
-    <link rel="stylesheet" type="text/css" href="#">
-    <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+<head>
+    <meta charSet="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Home Bar CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/default.css">
+    <!-- Outdated bootstrap!! Current version - 3; Present - 5 -->
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+    <!-- DUMMY -->
+    <link rel="stylesheet" type="text/css" href="assets/css/owl.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mycustom.css">
+    <!-- For Icons fontawesome.com -->
+    <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Favicon tab logo code -->
-	<link rel= "icon" href= "assets/images/Footer/logo.png">
-	
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" href="assets/images/Footer/logo.png">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About Rimone</title>
+    <!-- Java Script tags  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
     <script src="assets/js/custom.js"></script>
-
+    <script>
+        $(document).ready(function () {
+            $("body").show();
+        });
+    </script>
+    <!-- Script tags Ends-->
 </head>
+
 <body class="about">
-	<header>
+    <header>
+        <!-- Rimone logo home bar -->
         <div class="header-innerwrapper">
             <div class="logo col-md-4  col-sm-4 col-xs-2">
                 <a href="index.html"><img src="assets/images/logo.png" />
             </div>
-
-            <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
+            <!-- Appereance of HOME BAR -->
+            <div class="menu col-md-8 col-sm-8 col-xs-10"
+                style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
                 <div class="nav-wrapper">
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
                         <div class="site-identity">
                             <a href="index.html"><img src="assets/images/logo.png" />
                         </div>
+                        <!-- List of items on HOME BAR -->
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="solution.html">Solution</a></li>
@@ -42,10 +55,10 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
-
-                        <div class="appsd"  style="text-align: center">
-                            <a href="#"><img src="assets/images/istore.png" /></a>
-                            <a href="#"><img src="assets/images/gstore.png" /></a>
+                        <!-- App Store links -->
+                        <div class="appsd" style="text-align: center">
+                            <a href="#"><img src="assets/images/Home/istore.png" /></a>
+                            <a href="#"><img src="assets/images/Home/gstore.png" /></a>
                         </div>
                     </nav>
 
@@ -61,133 +74,148 @@
         </div>
     </header>
 
+    <!-- ***** SECTION 1 ****** -->
+    <!--1.1 About Rimone (Introduction) -->
     <div id="page" class="">
         <div class="pcontainer-wrapper">
-
-
-      <h3>ABOUT RIMONE</h3>
-      <p>
-      We aim to bring emobility in India by creating a nationwide network of charging stations for<br> electric vehicles. So that people can move freely in their electric vehicles without worrying about <br>their next charge. We want to make EV charging convenient, reliable and affordable.
-      </p>
-        
-          <div class="abtheros">
-          <div class="container item-wrapper">
-              <div class="items">
-                  <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                      <img src="assets/images/About/about1.png" />
-                  </div>
-                  <div class="htext col-md-6 col-sm-6 col-xs-12">
-                      <h4>Convenient</h4>
-                      <p class="hinfo">
-                           RIMONE chargers are precisely located at locations that will let you charge your EV while doing your daily errands. The convenient charging will save a lot of your time for charging so that whenever you need to rush, your EV  will be ready for the ride. 
-                      </p>
-                  </div>
-              </div>
-
-              <div class="items">
-                  <div class="htext col-md-6 col-sm-6 col-xs-12">
-                      <h4>Reliable</h4>
-                      <p class="hinfo">
-                            RIMONE's chargers will always be there when you need to charge your EV. We are consistently working on our network to make it more user friendly and easy to charge with.  
-                      </p>
-                  </div>
-                  <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                      <img src="assets/images/About/about2.jpg" />
-                  </div>
-              </div>
-
-              <div class="items">
-                  <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                      <img src="assets/images/About/about3.png" />
-                  </div>
-                  <div class="htext col-md-6 col-sm-6 col-xs-12">
-                      <h4>Affordable</h4>
-                      <p class="hinfo">
-                          With <strong>no service fees, session fees, or hidden charges</strong>, RIMONE offers two plans: a one-time charge(with no monthly fee) and a Membership plan (to unlock our lowest rates). We base our rates on regional utility costs, allowing us to offer the lowest possible rates in each area.
-                      </p>
-                  </div>
-              </div>
-          </div>
-        </div>
-
-   <div class="icons">
-          <div class="container">
-            <h4>RIMONE's SUSTAINABLE DEVELOPMENT GOALS</h4>
-          </div>
-    <div class="container">
-
-
-     <div class="owl-carousel owl-main-carousel">
-
-                  <div class="owl-feat-item">
-                  <img src="assets/images/About/sdg7.png" />
-                  <div class="slidecaption">
-                  <div class="slide-title">Clean Energy</div>
-                  </div>
-                  </div>
-      <div class="owl-feat-item">
-                        <img src="assets/images/About/sdg8.png" />
-                        <div class="slidecaption">
-                        <div class="slide-title">Economic Growth</div>
+            <h3>ABOUT RIMONE</h3>
+            <p>
+                We aim to bring emobility in India by creating a nationwide network of charging stations for<br>
+                electric vehicles. So that people can move freely in their electric vehicles without worrying about
+                <br>their next charge. We want to make EV charging convenient, reliable and affordable.
+            </p>
+            <!-- ***** SECTION 2 ****** -->
+            <!--2.1 Horizontal Slide View -->
+            <div class="abtheros">
+                <div class="container item-wrapper">
+                    <!--2.1.1 Horizontal Slide 1 -->
+                    <div class="items">
+                        <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
+                            <img src="assets/images/About/about1.png" />
                         </div>
-      </div>
-                  <div class="owl-feat-item">
-                  <img src="assets/images/About/sdg9.png" />
-                  <div class="slidecaption">
-                  <div class="slide-title">Innovative Infrastructure</div>
-                  </div>
-                  </div>
-      <div class="owl-feat-item">
-                        <img src="assets/images/About/sdg11.png" />
-                        <div class="slidecaption">
-                        <div class="slide-title">Sustainable Cities</div>
+                        <div class="htext col-md-6 col-sm-6 col-xs-12">
+                            <h4>Convenient</h4>
+                            <p class="hinfo">
+                                RIMONE chargers are precisely located at locations that will let you charge your EV
+                                while doing your daily errands. The convenient charging will save a lot of your time for
+                                charging so that whenever you need to rush, your EV will be ready for the ride.
+                            </p>
                         </div>
-      </div>
-                  <div class="owl-feat-item">
-                  <img src="assets/images/About/sdg13.png" />
-                  <div class="slidecaption">
-                  <div class="slide-title">Climate Action</div>
-                  </div>
-                  </div>
-      <div class="owl-feat-item">
-                        <img src="assets/images/About/sdg15.png" />
-                        <div class="slidecaption">
-                        <div class="slide-title">Life on Land</div>
+                    </div>
+                    <!--2.1.2 Horizontal Slide 2 -->
+                    <div class="items">
+                        <div class="htext col-md-6 col-sm-6 col-xs-12">
+                            <h4>Reliable</h4>
+                            <p class="hinfo">
+                                RIMONE's chargers will always be there when you need to charge your EV. We are
+                                consistently working on our network to make it more user friendly and easy to charge
+                                with.
+                            </p>
                         </div>
-      </div>
-
-     </div>
-    </div>
-   </div>
-   
-
-         <div class="ahero">
-            <div class="container">
-                <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                    <img src="assets/images/About/about4.jpg" />
-                </div>
-                <div class="htext col-md-6 col-sm-6 col-xs-12">
-                    <span>Partnership</span>
-                    <h4>Partner with India's Best Charging Network</h4>
-                    <p class="hinfo">
-                         Growing the nation’s best public charging network takes a village. Whether you're a site host, policymaker, or fleet/OEM owner, RIMONE is the right partner for you. 
-                    </p>
-                    <div class="btns">
-                        <a href="contact-us.html">CONTACT US</a>
+                        <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
+                            <img src="assets/images/About/about2.jpg" />
+                        </div>
+                    </div>
+                    <!--2.1.3 Horizontal Slide 3 -->
+                    <div class="items">
+                        <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
+                            <img src="assets/images/About/about3.png" />
+                        </div>
+                        <div class="htext col-md-6 col-sm-6 col-xs-12">
+                            <h4>Affordable</h4>
+                            <p class="hinfo">
+                                With <strong>no service fees, session fees, or hidden charges</strong>, RIMONE offers
+                                two plans: a one-time charge(with no monthly fee) and a Membership plan (to unlock our
+                                lowest rates). We base our rates on regional utility costs, allowing us to offer the
+                                lowest possible rates in each area.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <!-- ***** SECTION 3 ****** -->
+            <!--3.1 Icons Slideshow Heading -->
+            <div class="icons">
+                <div class="container">
+                    <h4>RIMONE's SUSTAINABLE DEVELOPMENT GOALS</h4>
+                </div>
+                <div class="container">
+                    <!--3.2 Icons Slideshow/Carousel -->
+                    <div class="owl-carousel owl-main-carousel">
+                        <div class="owl-feat-item">
+                            <img src="assets/images/About/sdg7.png" />
+                            <div class="slidecaption">
+                                <div class="slide-title">Clean Energy</div>
+                            </div>
+                        </div>
+                        <div class="owl-feat-item">
+                            <img src="assets/images/About/sdg8.png" />
+                            <div class="slidecaption">
+                                <div class="slide-title">Economic Growth</div>
+                            </div>
+                        </div>
+                        <div class="owl-feat-item">
+                            <img src="assets/images/About/sdg9.png" />
+                            <div class="slidecaption">
+                                <div class="slide-title">Innovative Infrastructure</div>
+                            </div>
+                        </div>
+                        <div class="owl-feat-item">
+                            <img src="assets/images/About/sdg11.png" />
+                            <div class="slidecaption">
+                                <div class="slide-title">Sustainable Cities</div>
+                            </div>
+                        </div>
+                        <div class="owl-feat-item">
+                            <img src="assets/images/About/sdg13.png" />
+                            <div class="slidecaption">
+                                <div class="slide-title">Climate Action</div>
+                            </div>
+                        </div>
+                        <div class="owl-feat-item">
+                            <img src="assets/images/About/sdg15.png" />
+                            <div class="slidecaption">
+                                <div class="slide-title">Life on Land</div>
+                            </div>
+                        </div>
 
+                    </div>
+                    <!--Slideshow/Carousel ENDS -->
+                </div>
+            </div>
+            <!-- ***** SECTION 4 ****** -->
+            <!--4.1 Partenership with RIMONE -->
+            <div class="ahero">
+                <div class="container">
+                    <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
+                        <img src="assets/images/About/about4.jpg" />
+                    </div>
+                    <div class="htext col-md-6 col-sm-6 col-xs-12">
+                        <span>Partnership</span>
+                        <h4>Partner with India's Best Charging Network</h4>
+                        <p class="hinfo">
+                            Growing the nation’s best public charging network takes a village. Whether you're a site
+                            host, policymaker, or fleet/OEM owner, RIMONE is the right partner for you.
+                        </p>
+                        <div class="btns">
+                            <a href="clientform.html">Partner with Rimone</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <div class="btm-img">
-            <div class="container">
-                <img src="assets/images/About/about5.png" />
+            <!-- ***** SECTION - Image ****** -->
+            <!-- Solutions Image -->
+            <div class="btm-img">
+                <div class="container">
+                    <img src="assets/images/About/about5.png" />
+                </div>
             </div>
         </div>
     </div>
-    </div>
+    <!-- ***** SECTION - FOOTER ****** -->
     <div id="footer"></div>
 
 </body>
+
 </html>
