--- a/footer.html
+++ b/footer.html
@@ -1,15 +1,21 @@
- <div class="footer">
+<!-- ***** SECTION 1- Footer ****** -->
+<script src="https://kit.fontawesome.com/30f52323eb.js" crossorigin="anonymous"></script>
+<div class="footer">
+    <!-- 1.1 Coloumn list -->
     <div class="f-wrapper">
-        <div class="cinfo col-md-3 col-sm-3 col-xs-12">
-			<div class="logo">
+        <!-- 1.1.1 Coloumn 1 -->
+        <div class="cinfo col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="logo">
                 <img src="assets/images/logo.png" />
             </div>
-            <p>Signup to receive the latest info on new charging stations, special offers, charging news, and more!</p>
+            <p>Signup to receive the latest info on new charging stations, special offers, charging news, and more!
+            </p>
             <form>
-                <input type="email" placeholder="Email Address" required />
+                <input type="email" placeholder="Suscribe to our newsletter" required />
             </form>
         </div>
-        <div class="fmenu col-md-3 col-sm-3 col-xs-6">
+        <!-- 1.1.2 Coloumn 2 -->
+        <div class="fmenu col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <h5>Company</h5>
             <ul class="footer-list">
                 <li><a href="business.html">Public Charging</a></li>
@@ -20,29 +26,39 @@
                 <li><a href="faqs.html">FAQ's</a></li>
             </ul>
         </div>
-        <div class="app col-md-3 col-sm-3 col-xs-12">
-            <a href=""><img src="assets/images/Footer/startupindia.png" style="border: none;"/> </a>
-			<a href=""><img src="assets/images/Footer/startuppunjab.png" style="border: none;"/> </a>
+        <div class="fmenu col-lg-3 col-md-3 col-sm-3 col-xs-6">
+            <h5>Rimone for</h5>
+            <ul class="footer-list">
+                <li><a href="#">Fleet</a></li>
+                <li><a href="#">Fleet</a></li>
+                <li><a href="#">Fleet</a></li>
+                <li><a href="#">Fleet</a></li>
+                <li><a href="#">Fleet</a></li>
+                <li><a href="#">Fleet</a></li>
+            </ul>
         </div>
-        <div class="app col-md-3 col-sm-3 col-xs-12">
-            <a href="#"><img src="assets/images/istore.png" /></a>
-            <a href="#"><img src="assets/images/gstore.png" /></a>
+        <!-- 1.2.3 Social Links-->
+        <div class="social col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <h5>Follow Us:</h5>
+            <a href=""><i class="fa-brands fa-facebook"></i></i></a>
+            <a href="https://www.linkedin.com/company/rimonecharge"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/rimonecharge/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com/rimonecharge"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </div>
-
+    <!-- ***** SECTION 2 ****** -->
+    <!-- 2.1 Creidts / T&C -->
     <div class="credit">
-        <div class="cc col-md-4 col-sm-4 col-xs-12">
-            Copyright © 2022 Rimone - All Rights Reserved.
+        <div class="copyright col-lg-6 col-md-4 col-sm-6 col-xs-6">
+            <p> &copy; Copyright <span class="year" id="currentYear"> </span> Rimone - All Rights Reserved.</p>
         </div>
-        <div class="terms col-md-4 col-sm-4 col-xs-12">
-            <a href="">Terms of Services</a> | <a href="">Privacy Policy</a>
-        </div>
-        <div class="social col-md-4 col-sm-4 col-xs-12">
-            <a href=""><i class="fa fa-fw fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/company/rimonecharge"><i class="fa fa-fw fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/rimonecharge/"><i class="fa fa-fw fa-instagram"></i></a>
-            <a href="https://twitter.com/rimonecharge"><i class="fa fa-fw fa-twitter"></i></a>
+        <div class="tc col-lg-6 col-md-4 col-sm-6 col-xs-6">
+            <a href=""> Terms of Serivices</a> | <a href=""> Privacy Policy </a>
         </div>
     </div>
-
 </div>
+<script>
+    var date = new Date();
+    var year = date.getFullYear();
+    document.getElementById('currentYear').innerHTML = year;
+</script>
