--- a/type-of-evs.html
+++ b/type-of-evs.html
@@ -19,6 +19,11 @@
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("body").show();
+        });
+    </script>
 
 </head>
 <body class="solution types_of_evs">
