--- a/pricing.html
+++ b/pricing.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en-IN">
+
 <head>
-    <meta charSet="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta charSet="utf-8" />
+    <meta charSet="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Home Bar CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/default.css">
+    <!-- Outdated bootstrap!! Current version - 3; Present - 5 -->
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+    <!-- DUMMY -->
     <link rel="stylesheet" type="text/css" href="assets/css/owl.css">
-	<link rel="stylesheet"  type="text/css" href="assets/css/mycustom.css">
-    <link rel="stylesheet" type="text/css" href="#">
+    <link rel="stylesheet" type="text/css" href="assets/css/mycustom.css">
+    <!-- For Icons fontawesome.com -->
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Favicon tab logo code -->
+    <link rel="icon" href="assets/images/Footer/logo.png">
 
-	<!-- Favicon tab logo code -->
-	<link rel= "icon" href= "assets/images/Footer/logo.png">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rimone Pricing</title>
+    <!-- Java Script tags  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
     <script src="assets/js/custom.js"></script>
-
+    <script>
+        $(document).ready(function () {
+            $("body").show();
+        });
+    </script>
+    <!-- Script tags Ends-->
 </head>
+
 <body class="pricing">
     <header>
+        <!-- Rimone logo home bar -->
         <div class="header-innerwrapper">
             <div class="logo col-md-4  col-sm-4 col-xs-2">
                 <a href="index.html"><img src="assets/images/logo.png" />
             </div>
-
-            <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
+            <!-- Appereance of HOME BAR -->
+            <div class="menu col-md-8 col-sm-8 col-xs-10"
+                style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
                 <div class="nav-wrapper">
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
                         <div class="site-identity">
                             <a href="index.html"><img src="assets/images/logo.png" />
                         </div>
+                        <!-- List of items on HOME BAR -->
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="solution.html">Solution</a></li>
@@ -42,10 +56,10 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
-
-                        <div class="appsd"  style="text-align: center">
-                            <a href="#"><img src="assets/images/istore.png" /></a>
-                            <a href="#"><img src="assets/images/gstore.png" /></a>
+                        <!-- App Store links -->
+                        <div class="appsd" style="text-align: center">
+                            <a href="#"><img src="assets/images/Home/istore.png" /></a>
+                            <a href="#"><img src="assets/images/Home/gstore.png" /></a>
                         </div>
                     </nav>
 
@@ -60,45 +74,51 @@
             </div>
         </div>
     </header>
-
+    <!-- ***** SECTION 1 ****** -->
+    <!-- 1.1 Pricing -->
     <div id="page" class="">
         <div class="pcontainer-wrapper">
-      <h3>RIMONE EV CHARGING PRICING</h3>
-      <p>Choose from plans which will let you charge at RIMONE's network of charging stations</p>
-        <div class="btm-img">
-            <div class="container">
-                <img src="assets/images/Pricing/pricing1.png" />
+            <h3>RIMONE EV CHARGING PRICING</h3>
+            <p>Choose from plans which will let you charge at RIMONE's network of charging stations</p>
+            <div class="btm-img">
+                <div class="container">
+                    <img src="assets/images/Pricing/pricing1.png" />
+                </div>
             </div>
-        </div>
+            <!-- ***** SECTION 2 ****** -->
+            <!-- 2.1 Plan Benefits -->
+            <div class="prices">
+                <div class="container">
+                    <h3>ALL RIMONE CHARGING PLANS INCLUDE</h3>
+                    <hr>
+                    <!-- 2.2 List of Benefits -->
+                    <div class="item-wrapper">
+                        <ul>
+                            <li>24/7 Customer Service</li>
+                            <li>No Commitment, Cancel Anytime</li>
+                            <li>Detailed Charging History</li>
+                        </ul>
 
-        <div class="prices">
-            <div class="container">
-                <h3>ALL RIMONE CHARGING PLANS INCLUDE</h3>
-                <hr>
-                <div class="item-wrapper">
-                    <ul>
-                      <li>24/7 Customer Service</li>
-                      <li>No Commitment, Cancel Anytime</li>
-                      <li>Detailed Charging History</li>
-                    </ul>
-
-                    <ul>
-                      <li>No Service Fee at Partner Roaming</li>
-                      <li>No Idle Fee</li>
-                      <li>No Session Fee</li>
-                    </ul>
+                        <ul>
+                            <li>No Service Fee at Partner Roaming</li>
+                            <li>No Idle Fee</li>
+                            <li>No Session Fee</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- ***** SECTION - Image ****** -->
+            <!-- Solutions Image -->
+            <div class="btm-img">
+                <div class="container">
+                    <img src="assets/images/Pricing/pricing2.png" />
                 </div>
             </div>
         </div>
-
-        <div class="btm-img">
-            <div class="container">
-                <img src="assets/images/Pricing/pricing2.png" />
-            </div>
-        </div>
     </div>
-    </div>
+    <!-- ***** SECTION - FOOTER ****** -->
     <div id="footer"></div>
 
 </body>
+
 </html>
