--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
                 <li><a href="business.html">Commercial Charging</a></li>
                 <li><a href="fleet.html">Fleet Charging</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
                 <li><a href="faqs.html">FAQ's</a></li>
             </ul>
         </div>
@@ -53,7 +53,7 @@
             <p> &copy; Copyright <span class="year" id="currentYear"> </span> Rimone - All Rights Reserved.</p>
         </div>
         <div class="tc col-lg-6 col-md-4 col-sm-6 col-xs-6">
-            <a href=""> Terms of Serivices</a> | <a href=""> Privacy Policy </a>
+            <a href=""> Terms of Serivices</a> | <a href="privacy.html"> Privacy Policy </a>
         </div>
     </div>
 </div>
