--- a/pricing.html
+++ b/pricing.html
@@ -54,7 +54,7 @@
                             <li><a href="solution.html">Solution</a></li>
                             <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="contact-us.html">Contact Us</a></li>
+                            <li><a href="contactus.html">Contact Us</a></li>
                         </ul>
                         <!-- App Store links -->
                         <div class="appsd" style="text-align: center">
@@ -68,7 +68,7 @@
                         <li><a href="solution.html">Solution</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact-us.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
