--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </div>
             <!-- Appereance of HOME BAR -->
             <div class="menu col-md-8 col-sm-8 col-xs-10"
-                style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
+                 style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
                 <div class="nav-wrapper">
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
@@ -53,7 +53,7 @@
                             <li><a href="solution.html">Solution</a></li>
                             <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="contact-us.html">Contact Us</a></li>
+                            <li><a href="contactus.html">Contact Us</a></li>
                         </ul>
                         <!-- App Store links -->
                         <div class="appsd" style="text-align: center">
@@ -67,7 +67,7 @@
                         <li><a href="solution.html">Solution</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact-us.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
