--- a/best-ways-to-charge.html
+++ b/best-ways-to-charge.html
@@ -40,7 +40,7 @@
                             <li><a href="solution.html">Solution</a></li>
                             <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="contact-us.html">Contact Us</a></li>
+                            <li><a href="contactus.html">Contact Us</a></li>
                         </ul>
 
                         <div class="appsd"  style="text-align: center">
@@ -54,7 +54,7 @@
                         <li><a href="solution.html">Solution</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact-us.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
