--- a/clientform.html
+++ b/clientform.html
@@ -40,14 +40,23 @@
         <a href="index.html"><img src="assets/images/logo.png" />
       </div>
 
-      <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
+      <div class="menu col-md-8 col-sm-8 col-xs-10"
+           style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
         <div class="nav-wrapper">
-          <a href="#menu" class="menu-link">&#9776;</a>
-          <nav id="menu" class="panel" role="navigation">
+             <a href="#menu" class="menu-link">&#9776;</a>
+             <nav id="menu" class="panel" role="navigation">
             <div class="site-identity">
               <a href="index.html"><img src="assets/images/logo.png" />
             </div>
-
+                  <!-- List of items on HOME BAR -->
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="solution.html">Solution</a></li>
+                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contactus.html">Contact Us</a></li>
+                        </ul>
+                        <!-- App Store links -->
 
             <div class="appsd" style="text-align: center">
               <a href="#"><img src="assets/images/Home/istore.png" /></a>
@@ -60,7 +69,7 @@
             <li><a href="solution.html">Solution</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>
       </div>
