--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <li><a href="solution.html">Solution</a></li>
                             <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="contact-us.html">Contact Us</a></li>
+                            <li><a href="contactus.html">Contact Us</a></li>
                         </ul>
 
                         <div class="appsd"  style="text-align: center">
@@ -58,7 +58,7 @@
                         <li><a href="solution.html">Solution</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact-us.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
