--- a/privacy.html
+++ b/privacy.html
@@ -66,9 +66,9 @@
         <div class="privacy-heading">
             
     <h2>PRIVACY POLICY</h2>
-    
+    <h4 style="color: black;"><strong>Last Updated Date: Jan 20, 2023</strong></h4>
     <p></p>
-    <!-- <h4>Effective Date:<br> Date Last Updated: <br></h4> -->
+   
     </div>
     <div class="container">
     <div class="your-class">
