--- a/best-ways-to-charge.html
+++ b/best-ways-to-charge.html
@@ -3,7 +3,9 @@
 <head>
     <meta charSet="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<!-- Home Bar CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/default.css">
+	<!-- Outdated bootstrap!! Current version - 3; Present - 5 -->
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl.css">
 	<link rel="stylesheet"  type="text/css" href="assets/css/mycustom.css">
@@ -15,6 +17,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>How to Richarge with Rimone</title>
+	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/css/owl.carousel.min.css"></script>
     <script src="assets/js/external.js"></script>
