--- a/privacy.html
+++ b/privacy.html
@@ -294,7 +294,7 @@ emails. For more information about online marketing activity, see Section 6 belo
              <li><strong> Terms of Use </strong></li>
              <h4>The Terms of Use for interactions with us are incorporated by reference into this Notice and 
              can be found at Term of Use section on our website. </h4>
-             <li><strong> Contact Info/Your Choices </strong></li>
+             <li><strong> Contact Info </strong></li>
            <h4>  If you have any questions regarding this Notice, please contact us at 
             <a href="mailto: info@rimonecharge.com">info@rimonecharge.com</a><br><br>
 
