--- a/footer.html
+++ b/footer.html
@@ -18,9 +18,9 @@
         <div class="fmenu col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <h5>Company</h5>
             <ul class="footer-list">
-                <li><a href="business.html">Public Charging</a></li>
-                <li><a href="business.html">Commercial Charging</a></li>
-                <li><a href="fleet.html">Fleet Charging</a></li>
+                <li><a href="solution.html">EV Charging</a></li>
+                <li><a href="fleet.html">Electric Fleet</a></li>
+                <li><a href="clientform.html">Host Charger</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="contactus.html">Contact us</a></li>
                 <li><a href="faqs.html">FAQ's</a></li>
@@ -30,9 +30,9 @@
             <h5>Rimone for</h5>
             <ul class="footer-list">
                 <li><a href="#">Co-op Societies</a></li>
-                <li><a href="#">Electric Fleet</a></li>
+                <li><a href="#">Commercial</a></li>
+				<li><a href="#">Fleet Charging</a></li>
                 <li><a href="#">Hotels</a></li>
-                <li><a href="#">Office</a></li>
                 <li><a href="#">Real Estate</a></li>
                 <li><a href="#">Restaurants</a></li>
             </ul>
