--- a/footer.html
+++ b/footer.html
@@ -29,12 +29,12 @@
         <div class="fmenu col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <h5>Rimone for</h5>
             <ul class="footer-list">
-                <li><a href="#">Co-op Societies</a></li>
-                <li><a href="#">Commercial</a></li>
-				<li><a href="#">Fleet Charging</a></li>
-                <li><a href="#">Hotels</a></li>
-                <li><a href="#">Real Estate</a></li>
-                <li><a href="#">Restaurants</a></li>
+                <li><a href="assets/docs/rimoneforsocieties.pdf">Co-op Societies</a></li>
+                <li><a href="assets/docs/rimoneforcpmmercialcomplex.pdf">Commercial</a></li>
+				<li><a href="assets/docs/rimoneforfleet.pdf">Fleet Charging</a></li>
+                <li><a href="assets/docs/rimoneforhoreca.pdf">Hotels</a></li>
+                <li><a href="assets/docs/rimoneforrealestate.pdf">Real Estate</a></li>
+                <li><a href="assets/docs/rimoneforhoreca.pdf">Restaurants</a></li>
             </ul>
         </div>
         <!-- 1.2.3 Social Links-->
