pdf files added and linked

--- a/fleet.html
+++ b/fleet.html
@@ -75,7 +75,7 @@
                 RIMONE has the best charging solution for your light, medium & heavy fleet with the best in class charging infrastructure withstanding global standards.
             </p>
             <div class="btns">
-                <a href="contact-us.html">CONTACT US</a>
+                <a href="contactus.html">CONTACT US</a>
             </div>
         </div>
 		<div class="icons">
@@ -211,7 +211,7 @@
             <h3>Ready to electrify your fleet?</h3>
 
             <div class="btns">
-                <a href="contact-us.html">CONTACT US</a>
+                <a href="clientform.html">CONTACT US</a>
             </div>
         </div>
 
