--- a/best-ways-to-charge.html
+++ b/best-ways-to-charge.html
@@ -75,14 +75,17 @@
         </header>
 	    <!-- Header Ends HERE -->
 
+<!-- Page starts HERE -->  
 <div id="page" class="">
-    <div class="pcontainer-wrapper">
-    <h3>CHARGING IN JUST THREE SIMPLE STEPS</h3>
-    <hr>
-    <div class="abtheros">
-        <div class="container item-wrapper">
-            <div class="items">
-                <div class="img-wrapper col-md-4 col-sm-4 col-xs-12">
+<div class="pcontainer-wrapper">
+
+
+          <h3>CHARGING IN JUST THREE SIMPLE STEPS</h3>
+          <hr>
+          <div class="abtheros">
+          <div class="container item-wrapper">
+          <div class="items">
+          <div class="img-wrapper col-md-4 col-sm-4 col-xs-12">
                     <img src="assets/images/BWC/bwc1.png" />
                 </div>
                 <div class="htext col-md-8 col-sm-8 col-xs-12">
