--- a/business.html
+++ b/business.html
@@ -80,15 +80,15 @@
 <div id="page" class="">
 <div class="pcontainer-wrapper">
 
-          <!-- Section1 of Page Starts HERE -->
-          <h3>HOST AN EV CHARGING STATION</h3>
-          <p>
+           <!-- Section1 of Page Starts HERE -->
+           <h3>HOST AN EV CHARGING STATION</h3>
+           <p>
 		  Be the Green leader of India and achieve the green leader title by adopting EV charging infrastructure at your location.
 		  </p>
-          <!-- Section1 of Page Ends HERE -->
+           <!-- Section1 of Page Ends HERE -->
 		  
-		  <!-- Section2 of Page Starts HERE -->
-		  <div class="business">
+		   <!-- Section2 of Page Starts HERE -->
+		   <div class="business">
           <div class="container">
           <h3>Why RIMONE Charge?</h3>
           <hr>
@@ -151,15 +151,19 @@
            </div>
 		   <!-- Section4 of Page Ends HERE -->
 
+           <!-- Section5 of Page Starts HERE -->
+           <div class="btm-img">
+           <div class="container">
+           <img src="assets/images/Business/bs4.png" />
+           </div>
+           </div>
+		   <!-- Section5 of Page Ends HERE -->
 
-    <div class="btm-img">
-        <div class="container">
-            <img src="assets/images/Business/bs4.png" />
-        </div>
-    </div>
 </div>
 </div>
+<!-- Page Ends HERE -->
 
+<!-- footer -->
 <div id="footer"></div>
 
 </body>
