--- a/solution.html
+++ b/solution.html
@@ -79,123 +79,130 @@
 	    <!-- Header Ends HERE -->
 		
 		
-    <!-- ***** SECTION 1 ****** -->
-    <div id="page" class="">
-        <div class="pcontainer-wrapper">
-            <div class="solutions">
+<!-- ***** SECTION 1 ****** -->
+<div id="page" class="">
+<div class="pcontainer-wrapper">
+
+                <!-- Section1 of Page Starts HERE -->
+			    <div class="solutions">
                 <div class="container">
-                    <!-- 1.1 Heading => Coloumn Tiles -->
-                    <h3>E-MOBILITY WITH RIMONE</h3>
-                    <hr>
-                    <!-- 1.1.1 Coloumn 1 -->
-                    <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
-                        <img src="assets/images/Solution/solution1.jpg" />
-                        <div class="btns">
-                            <a href="business.html">PUBLIC</a>
-                        </div>
-                    </div>
-                    <!-- 1.1.2 Coloumn 2 -->
-                    <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
-                        <img src="assets/images/Solution/solution2.png" />
-                        <div class="btns">
-                            <a href="business.html">COMMERCIAL</a>
-                        </div>
-                    </div>
-                    <!-- 1.1.3 Coloumn 3 -->
-                    <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
-                        <img src="assets/images/Solution/solution3.png" />
-                        <div class="btns">
-                            <a href="fleet.html">FLEET</a>
-                        </div>
-                    </div>
+                <!-- 1.1 Heading => Coloumn Tiles -->
+                <h3>E-MOBILITY WITH RIMONE</h3>
+                <hr>
+                       <!-- 1.1.1 Coloumn 1 -->
+                       <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
+                       <img src="assets/images/Solution/solution1.jpg" />
+                       <div class="btns">
+                       <a href="business.html">PUBLIC</a>
+                       </div>
+                       </div>
+                       <!-- 1.1.2 Coloumn 2 -->
+                       <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
+                       <img src="assets/images/Solution/solution2.png" />
+                       <div class="btns">
+                       <a href="business.html">COMMERCIAL</a>
+                       </div>
+                       </div>
+                       <!-- 1.1.3 Coloumn 3 -->
+                       <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
+                       <img src="assets/images/Solution/solution3.png" />
+                       <div class="btns">
+                       <a href="fleet.html">FLEET</a>
+                       </div>
+                       </div>
                 </div>
-            </div>
-            <!-- ***** SECTION 2 ****** -->
-            <div class="heros">
-                <!-- 2.1 Horizontal Slide View -->
+                </div>
+			    <!-- Section1 of Page Ends HERE -->
+			
+                <!-- ***** SECTION2 of Page Starts HERE ****** -->
+                <div class="heros">
                 <div class="container item-wrapper">
-                    <!-- 2.1.1 Horizontal Slide 1 -->
-                    <div class="items">
-                        <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                            <img src="assets/images/Solution/solution4.png" />
-                        </div>
-                        <div class="htext col-md-6 col-sm-6 col-xs-12">
-                            <h4>Public Charging</h4>
-                            <p class="hinfo">
-                                Partner with RIMONE and host the charging station at your location.
-                            </p>
-                            <ul>
-                                <li>Make your business future proof with emobility</li>
-                                <li>Attract new customers and increase your revenue</li>
-                                <li>Avoid ongoing maintenance and operation activities of charging infrastructure</li>
-                                <li>RIMONE will maintain and handle all the activities</li>
-                                <li>Site promotions and advertisements for customer acquisition.</li>
-                            </ul>
-                            <div class="btns">
-                                <a href="assets/docs/publiccharging.pdf">Learn more</a>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <!-- 2.1.2 Horizontal Slide 2 -->
-                    <div class="items">
-                        <div class="htext col-md-6 col-sm-6 col-xs-12">
-                            <h4>Commercial Charging</h4>
-                            <p class="hinfo">
-                                Host the charging infrastructure at your workplace.
-                            </p>
-                            <ul>
-                                <li>Increase employee productivity and interest</li>
-                                <li>Achieve companies sustainable development goals</li>
-                                <li>Saves a lot of time of your employee for work</li>
-                                <li>Low maintenance and running cost makes it pocket friendly</li>
-                            </ul>
-
-                            <div class="btns">
-                                <a href="assets/docs/rimoneforcommercialcomplex.pdf">Learn more</a>
-                            </div>
-
-                        </div>
-                        <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                            <img src="assets/images/Solution/solution5.png" />
-                        </div>
-                    </div>
-                    <!-- 2.1.3 Horizontal Slide 3 -->
-                    <div class="items">
-                        <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
-                            <img src="assets/images/Solution/solution6.png" />
-                        </div>
-                        <div class="htext col-md-6 col-sm-6 col-xs-12">
-                            <h4>Fleet Charging</h4>
-                            <p class="hinfo">
-                                Partner with RIMONE to power your EV fleet any time and anywhere.
-                            </p>
-                            <ul>
-                                <li>Lower the TCO by partnering with RIMONE</li>
-                                <li>Wide network of charging station to charge on the way</li>
-                                <li>Lower the expenses will help to earn more profits</li>
-                                <li>EV's are the future lets become part of it</li>
-                            </ul>
-                            <div class="btns">
-                                <a href="assets/docs/rimoneforfleet.pdf">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
+                      
+					  <!-- 2.1.1 Horizontal Slide 1 -->
+                      <div class="items">
+                      <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
+                      <img src="assets/images/Solution/solution4.png" />
+                      </div>
+                      <div class="htext col-md-6 col-sm-6 col-xs-12">
+                      <h4>Public Charging</h4>
+                      <p class="hinfo">
+                      Partner with RIMONE and host the charging station at your location.
+                      </p>
+                      <ul>
+                      <li>Make your business future proof with emobility</li>
+                      <li>Attract new customers and increase your revenue</li>
+                      <li>Avoid ongoing maintenance and operation activities of charging infrastructure</li>
+                      <li>RIMONE will maintain and handle all the activities</li>
+                      <li>Site promotions and advertisements for customer acquisition.</li>
+                      </ul>
+                      <div class="btns">
+                      <a href="assets/docs/publiccharging.pdf">Learn more</a>
+                      </div>
+                      </div>
+                      </div>
+  
+                      <!-- 2.1.2 Horizontal Slide 2 -->
+                      <div class="items">
+                      <div class="htext col-md-6 col-sm-6 col-xs-12">
+                      <h4>Commercial Charging</h4>
+                      <p class="hinfo">
+                      Host the charging infrastructure at your workplace.
+                      </p>
+                      <ul>
+                      <li>Increase employee productivity and interest</li>
+                      <li>Achieve companies sustainable development goals</li>
+                      <li>Saves a lot of time of your employee for work</li>
+                      <li>Low maintenance and running cost makes it pocket friendly</li>
+                      </ul>
+                      <div class="btns">
+                      <a href="assets/docs/rimoneforcommercialcomplex.pdf">Learn more</a>
+                      </div>
+                      </div>
+                      <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
+                      <img src="assets/images/Solution/solution5.png" />
+                      </div>
+                      </div>
+  
+                      <!-- 2.1.3 Horizontal Slide 3 -->
+                      <div class="items">
+                      <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
+                      <img src="assets/images/Solution/solution6.png" />
+                      </div>
+                      <div class="htext col-md-6 col-sm-6 col-xs-12">
+                      <h4>Fleet Charging</h4>
+                      <p class="hinfo">
+                      Partner with RIMONE to power your EV fleet any time and anywhere.
+                      </p>
+                      <ul>
+                      <li>Lower the TCO by partnering with RIMONE</li>
+                      <li>Wide network of charging station to charge on the way</li>
+                      <li>Lower the expenses will help to earn more profits</li>
+                      <li>EV's are the future lets become part of it</li>
+                      </ul>
+                      <div class="btns">
+                      <a href="assets/docs/rimoneforfleet.pdf">Learn more</a>
+                      </div>
+                      </div>
+                      </div>
+					  
                 </div>
-            </div>
+                </div>
+			    <!-- Section2 of Page Ends HERE -->
 
-            <!-- ***** SECTION - Image ****** -->
-            <!-- Solutions Image -->
-            <div class="btm-img">
+                <!-- ***** SECTION3 of Page Starts HERE - Image ****** -->
+                <div class="btm-img">
                 <div class="container">
-                    <img src="assets/images/Solution/solution7.png" />
+                <img src="assets/images/Solution/solution7.png" />
                 </div>
-            </div>
-        </div>
-    </div>
-    <!-- ***** SECTION - FOOTER ****** -->
-    <div id="footer"></div>
+                </div>
+				<!-- ***** SECTION3 of Page Ends HERE - Image ****** -->
+
+</div>
+</div>
+<!-- Page Ends HERE -->  
+
+<!-- Footer -->    
+<div id="footer"></div>
 
 </body>
 
